[documentation] common elements for documentation across repos

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -3,18 +3,33 @@
 
 # You can set these variables from the command line, and also
 # from the environment for the first two.
-SPHINXOPTS ?=
-SPHINXBUILD?= sphinx-build
-SOURCEDIR   = source
-BUILDDIR    = build
+SPHINXOPTS?=
+SPHINXBUILD?=sphinx-build
+SOURCEDIR=source
+BUILDDIR=build
+DOXYREST_PREFIX?=$(CONDA_PREFIX)
+
+EOS_SITE_NAME?=test-gemdaq-ci
+EOS_SITE_PATH?=/tmp/$(USER)/$(EOS_SITE_NAME)
+
+export EOS_SITE_URL?=https://$(EOS_SITE_NAME).web.cern.ch/$(EOS_SITE_NAME)
+export GEM_DOCS_URL?=$(EOS_SITE_URL)
+
+.EXPORT_ALL_VARIABLES:
+
+.PHONY: help Makefile
+
+# Put it first so that "make" without argument is like "make help".
+help:
+	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
+
+.PHONY: docs
+docs: html
 
 .PHONY: doxygen doxyrest
-.PHONY: cleandoxygen cleandoxyrest
-
 doxygen:
 	cp ctp7_modules.doxygen ctp7_modules.cfg
-	# perl -pi -e "s|__GEM_OS_PROJECT__|$(GEM_OS_PROJECT)|g" ctp7_modules.cfg
-	# perl -pi -e "s|__GIT_VERSION__|$(GIT_VERSION)|g" ctp7_modules.cfg
+	perl -pi -e "s|__GIT_VERSION__|$(GIT_VERSION)|g" ctp7_modules.cfg
 	doxygen ctp7_modules.cfg
 
 doxyrest: doxygen
@@ -22,23 +37,22 @@ doxyrest: doxygen
 	perl -pi -e "s|__DOXYREST_PREFIX__|$(DOXYREST_PREFIX)|g" doxyrest-config.lua
 	doxyrest -c doxyrest-config.lua
 
-# Put it first so that "make" without argument is like "make help".
-help:
-	@$(SPHINXBUILD) -M help "$(SOURCEDIR)" "$(BUILDDIR)" $(SPHINXOPTS) $(O)
-
-.PHONY: clean cleanall help Makefile
-
-clean:
-	rm -rf build
-	rm -rf source/exhale-api
-
+.PHONY: cleandoxygen cleandoxyrest cleanexhale
 cleandoxygen:
 	rm -rf doxybuild
 
 cleandoxyrest:
 	rm -rf source/doxyrest-api
 
-cleanall: cleandoxygen cleandoxyrest
+cleanexhale:
+	rm -rf exhalebuild
+	rm -rf source/exhale-api
+
+.PHONY: clean cleanall
+clean:
+	rm -rf build
+
+cleanall: clean cleandoxygen cleandoxyrest cleanexhale
 
 # Catch-all target: route all unknown targets to Sphinx using the new
 # "make mode" option.  $(O) is meant as a shortcut for $(SPHINXOPTS).
